<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/callsettings_allcalls_outgoing_call_vibration" android:key="outgoingcall_vibration_preference" android:summary="@string/callsettings_callcals_outgoing_call_sub" />
    <com.sec.android.app.callsetting.allcalls.CallStatusTonesPreference android:title="@string/callsettings_allcalls_callstatustones" android:key="callstatustones_preference" android:summary="@string/callsettings_list5_sub_text" android:dialogTitle="@string/callsettings_allcalls_callstatustones" />
    <CheckBoxPreference android:title="@string/callsettings_allcalls_alertsoncall" android:key="alertoncall_check_preference" android:summary="@string/callsettings_allcalls_alertsoncall_summary" />
</PreferenceScreen>
