<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:id="@id/hint" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0sp" />
        <TextView android:textStyle="bold" android:textColor="@color/twcolor036" android:id="@id/error" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textColor="@android:color/white" android:id="@id/old_password_prompt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/callbarring_old" />
        <EditText android:id="@id/old_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/callbarring_old_password" android:password="true" android:singleLine="true" android:maxLength="4" android:numeric="decimal" android:inputType="textPassword|phone" />
        <TextView android:textColor="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/callbarring_new" />
        <EditText android:id="@id/new_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/callbarring_new_password" android:password="true" android:singleLine="true" android:maxLength="4" android:numeric="decimal" android:inputType="textPassword|phone" />
        <TextView android:textColor="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/callbarring_confirm" />
        <EditText android:id="@id/confirm_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/callbarring_confirm_password" android:password="true" android:singleLine="true" android:maxLength="4" android:numeric="decimal" android:inputType="textPassword|phone" />
    </LinearLayout>
</ScrollView>
